<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@drawable/lightbeige">

    <TextView
        android:id="@+id/placeOrderTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:inputType="none"
        android:text="Order for: "
        android:textSize="24sp" />
    <TextView
        android:id="@+id/productNameDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:ems="10"

        android:inputType="none"
        android:text=""
        android:textSize="24sp" />

    <EditText
    android:id="@+id/Order_notes"
    android:inputType="text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp"
    android:hint="Order Notes"
  />

    <EditText
        android:id="@+id/orderQuantityyyy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789"
        android:ems="10"
        android:hint="Order Quantity"
        android:inputType="number"
        android:text="1" />

    <Button
        android:id="@+id/btnConfirmOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm Order"
        android:onClick="placeOrder"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>


</LinearLayout>